--- a/style.css
+++ b/style.css
@@ -1,18 +1,54 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+/* Variables */
+:root {
+  /* Colors */
+  --black: #212529;
+  --white: white;
+  --red: #8d1b3d;
+  --oliveGreen: #3f5b58;
+  --lightGreen: #597e50;
+  --lightBlue: #489ed8;
+  --darkBlue: #002855;
+  /* Fonts */
+  --mainFont: "Verdana", sans-serif;
+  --secondaryFont: "Helvetica", sans-serif;
+  /* Typography */
+  --header1: 5rem;
+  --header2: 4rem;
+  --header3: 3rem;
+  --header4: 2rem;
+  --header5: 1.5rem;
+  --paragraph: 1rem;
+  /* Box-shadow */
+  --boxShadow: rgba(0, 0, 0, 0.5) 0px 0px 8px 0px;
+}
 
+/* Resets */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: var(--mainFont);
 }
 
-body {
-  font-family: "Roboto";
-  margin: 0;
+/* Classes */
+.hidden {
+  display: none;
+}
+
+.center {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  height: 100vh;
-  overflow: hidden;
+  align-items: center;
+}
+
+/* Mobile First (default styles) */
+
+/* Tablet */
+@media (min-width: 768px) {
+  /* Styles for tablets only */
+}
+
+/* Desktop */
+@media (min-width: 1024px) {
+  /* Styles for desktops only */
 }
