--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   /* Colors */
   --black: #212529;
   --white: white;
+  --grey: #d9d9d9;
   --red: #8d1b3d;
   --oliveGreen: #3f5b58;
   --lightGreen: #597e50;
@@ -19,7 +20,7 @@
   --header5: 1.5rem;
   --paragraph: 1rem;
   /* Box-shadow */
-  --boxShadow: rgba(0, 0, 0, 0.5) 0px 0px 8px 0px;
+  --boxShadow: 0px 8px 8px -10px rgba(0, 0, 0, 0.5);
 }
 
 /* Resets */
@@ -29,12 +30,16 @@
   box-sizing: border-box;
   font-family: var(--mainFont);
 }
+body {
+  background-color: var(--white);
+  padding-left: 10px;
+  padding-right: 10px;
+}
 
 /* Classes */
 .hidden {
   display: none;
 }
-
 .center {
   display: flex;
   justify-content: center;
@@ -60,15 +65,195 @@ h5 {
 p {
   font-size: var(--paragraph);
 }
+a.link {
+  color: var(--black);
+  border-bottom: 2px solid #c8102e;
+  text-decoration: none !important;
+  line-height: 1.5;
+  font-weight: bold;
+}
 
 /* Mobile First (default styles) */
+header {
+  width: 100%;
+  height: 100px;
+  border: 1px solid black;
+  position: sticky;
+  top: 0;
+  z-index: 2;
+  background-color: var(--white);
+  margin-bottom: 20px;
+}
+
+header #top_menu {
+  display: none;
+}
+
+header #bottom_menu {
+  display: none;
+}
+
+header #nav_logo {
+  position: absolute;
+  top: 25%;
+  left: 20px;
+  background-image: url("assets/hjv_logo.svg");
+  background-repeat: no-repeat;
+  width: 50px;
+  height: 50px;
+}
+
+.bigbreaker {
+  width: 100%;
+  border: 5px solid #3f5b58;
+  background-color: #3f5b58;
+  margin: 60px 0;
+}
+.smallbreaker {
+  width: 100%;
+  border: 1px solid #3f5b58;
+  background-color: #3f5b58;
+  margin: 60px 0;
+}
+
+.boxlink {
+  width: 370px;
+  height: 370px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  background-image: url("https://www.hjemmevaernet.dk/globalassets/hjv/billeder/promo/organisation/-fhv-promo-2024-promo.jpg");
+  background-repeat: no-repeat;
+}
+
+.boxlink .overlay {
+  position: absolute;
+  padding: 10px;
+  width: 90%;
+  height: 30%;
+  background-color: var(--lightBlue);
+  bottom: 20px;
+}
+
+.boxlink .overlay div {
+  color: var(--white);
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding-top: 10px;
+  padding-left: 10px;
+  position: relative;
+}
+.boxlink .overlay div::after {
+  content: ">";
+  position: absolute;
+  right: 10px;
+}
+
+button {
+  background-color: transparent;
+  padding: 10px;
+  color: var(--black);
+  font-weight: bold;
+  transition: background-color 0.3s linear;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: var(--black);
+  color: var(--white);
+  transition: background-color 0.3s linear;
+}
+
+.input_container {
+  position: relative;
+  width: 100%;
+}
+
+.input_container input#userprompt {
+  width: 100%;
+  height: 40px;
+  padding-left: 20px;
+  padding-right: 40px;
+  margin: 10px 0;
+  background-color: var(--grey);
+  border: none;
+}
+
+input:focus {
+  outline: var(--black) solid 1px;
+}
+
+.input_container i {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: #333; /* Adjust icon color */
+}
 
 /* Tablet */
 @media (min-width: 768px) {
-  /* Styles for tablets only */
+  .input_container {
+    position: relative;
+    width: 50%;
+  }
 }
 
 /* Desktop */
 @media (min-width: 1024px) {
-  /* Styles for desktops only */
+  body {
+    padding-left: 150px;
+    padding-right: 150px;
+  }
+  header #nav_logo {
+    background-image: url("assets/hjemmevaernet_logo.svg");
+    top: 20%;
+    width: 280px;
+    height: 80px;
+  }
+  header #top_menu {
+    display: block;
+    position: absolute;
+    right: 20px;
+    top: 10px;
+  }
+  header #top_menu ul {
+    list-style: none;
+    display: flex;
+  }
+  header #top_menu ul li {
+    margin: 0px 0 0 25px;
+    font-size: 0.7rem;
+  }
+
+  header #bottom_menu {
+    display: block;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+  }
+  header #bottom_menu ul {
+    list-style: none;
+    display: flex;
+  }
+  header #bottom_menu ul li {
+    margin: 10px;
+    font-size: 0.8rem;
+    font-weight: bold;
+  }
+  .input_container {
+    position: relative;
+    width: 50%;
+  }
+
+  .input_container input#userprompt {
+    width: 100%;
+    height: 40px;
+    padding-left: 20px;
+    padding-right: 40px;
+    margin: 10px 0;
+    background-color: var(--grey);
+    border: none;
+  }
 }
