--- a/style.css
+++ b/style.css
@@ -166,13 +166,14 @@ button:hover {
 
 #chat_container {
   position: relative;
-  height: 50vh;
+  height: 800px;
   width: 100%;
-  border: solid 1px var(--black);
+  border: solid 1px var(--grey);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   font-size: var(--paragraph);
+  padding: 10px;
 }
 
 #chat {
@@ -192,7 +193,7 @@ button:hover {
 }
 
 #chat .user_question::before {
-  content: "Username";
+  content: "Bruger";
   display: none;
   position: absolute;
   top: -20px;
@@ -211,15 +212,17 @@ button:hover {
   line-height: 1.5;
 }
 #chat .bot_answer::before {
-  content: "Botname";
+  content: "Bot";
   display: none;
-  position: absolute;
   top: -20px;
 }
 
 #chat.show-username .user_question::before,
 #chat.show-username .bot_answer::before {
   display: inline;
+  font-size: 0.8rem;
+  position: absolute;
+  color: var(--red);
 }
 
 #chatbtns_container {
@@ -233,6 +236,7 @@ button#increaseFont {
   width: 50px;
   height: 50px;
   font-size: 1.2rem;
+  border: 2px solid var(--grey);
 }
 
 button#decreaseFont {
@@ -240,6 +244,7 @@ button#decreaseFont {
   width: 50px;
   height: 50px;
   font-size: 0.75rem;
+  border: 2px solid var(--grey);
 }
 
 .input_container {
@@ -276,6 +281,9 @@ input:focus {
   .input_container {
     position: relative;
     width: 50%;
+  }
+  #chat_container {
+    height: 500px;
   }
 }
 
@@ -328,6 +336,10 @@ input:focus {
     width: 50%;
   }
 
+  .input_container i {
+    top: 50%;
+  }
+
   .input_container input#userprompt {
     width: 100%;
     height: 40px;
@@ -336,5 +348,8 @@ input:focus {
     margin: 10px 0;
     background-color: var(--grey);
     border: none;
+  }
+  #chat_container {
+    height: 600px;
   }
 }
