--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ header #nav_logo {
   height: 50px;
 }
 
+/* Graphics elements */
 .bigbreaker {
   width: 100%;
   border: 5px solid #3f5b58;
@@ -115,7 +116,6 @@ header #nav_logo {
   background-color: #3f5b58;
   margin: 60px 0;
 }
-
 .boxlink {
   width: 370px;
   height: 370px;
@@ -125,7 +125,6 @@ header #nav_logo {
   background-image: url("https://www.hjemmevaernet.dk/globalassets/hjv/billeder/promo/organisation/-fhv-promo-2024-promo.jpg");
   background-repeat: no-repeat;
 }
-
 .boxlink .overlay {
   position: absolute;
   padding: 10px;
@@ -134,7 +133,6 @@ header #nav_logo {
   background-color: var(--lightBlue);
   bottom: 20px;
 }
-
 .boxlink .overlay div {
   color: var(--white);
   font-size: 1.5rem;
@@ -149,6 +147,7 @@ header #nav_logo {
   right: 10px;
 }
 
+/* Buttons */
 button {
   border: solid 2px black;
   background-color: transparent;
@@ -157,78 +156,10 @@ button {
   transition: background-color 0.3s linear;
   cursor: pointer;
 }
-
 button:hover {
   background-color: var(--black);
   color: var(--white);
   transition: background-color 0.3s linear;
-}
-
-#chat_container {
-  position: relative;
-  height: 800px;
-  width: 100%;
-  border: solid 1px var(--grey);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  font-size: var(--paragraph);
-  padding: 10px;
-}
-
-#chat {
-  position: relative;
-}
-
-#chat #user_questions {
-  position: absolute;
-  right: 0;
-}
-
-#chat .user_question {
-  top: 20px;
-  position: relative;
-  text-align: right;
-  font-size: var(--paragraph);
-}
-
-#chat .user_question::before {
-  content: "Bruger";
-  display: none;
-  position: absolute;
-  top: -20px;
-  right: 0px;
-}
-
-#chat #bot_answers {
-  position: absolute;
-  top: 100px;
-  left: 0;
-}
-#chat .bot_answer {
-  position: relative;
-  text-align: left;
-  font-size: var(--paragraph);
-  line-height: 1.5;
-}
-#chat .bot_answer::before {
-  content: "Bot";
-  display: none;
-  top: -20px;
-}
-
-#chat.show-username .user_question::before,
-#chat.show-username .bot_answer::before {
-  display: inline;
-  font-size: 0.8rem;
-  position: absolute;
-  color: var(--red);
-}
-
-#chatbtns_container {
-  display: flex;
-  position: absolute;
-  bottom: 60px;
 }
 
 button#increaseFont {
@@ -247,11 +178,72 @@ button#decreaseFont {
   border: 2px solid var(--grey);
 }
 
+/* Chat */
+#chat_container {
+  position: relative;
+  height: 800px;
+  width: 100%;
+  border: solid 1px var(--grey);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-size: var(--paragraph);
+  padding: 10px;
+}
+#chat {
+  position: relative;
+}
+#chat #user_questions {
+  position: absolute;
+  right: 0;
+}
+#chat .user_question {
+  top: 20px;
+  position: relative;
+  text-align: right;
+  font-size: var(--paragraph);
+}
+#chat .user_question::before {
+  content: "Bruger";
+  display: none;
+  position: absolute;
+  top: -20px;
+  right: 0px;
+}
+#chat #bot_answers {
+  position: absolute;
+  top: 100px;
+  left: 0;
+}
+#chat .bot_answer {
+  position: relative;
+  text-align: left;
+  font-size: var(--paragraph);
+  line-height: 1.5;
+}
+#chat .bot_answer::before {
+  content: "Bot";
+  display: none;
+  top: -20px;
+}
+#chat.show-username .user_question::before,
+#chat.show-username .bot_answer::before {
+  display: inline;
+  font-size: 0.8rem;
+  position: absolute;
+  color: var(--red);
+}
+#chatbtns_container {
+  display: flex;
+  position: absolute;
+  bottom: 60px;
+}
+
+/* User input */
 .input_container {
   position: relative;
   width: 100%;
 }
-
 .input_container input#userprompt {
   width: 100%;
   height: 50px;
@@ -261,11 +253,9 @@ button#decreaseFont {
   background-color: var(--grey);
   border: none;
 }
-
 input:focus {
   outline: var(--black) solid 1px;
 }
-
 .input_container i {
   position: absolute;
   right: 20px;
@@ -274,6 +264,28 @@ input:focus {
   cursor: pointer;
   color: #333; /* Adjust icon color */
   font-size: 1.2rem !important;
+}
+
+/* Loader */
+.loader {
+  border: 8px solid #d9d9d9;
+  border-top: 8px solid #8d1b3d;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+
+.loader.active {
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 /* Tablet */
