--- a/style.css
+++ b/style.css
@@ -473,4 +473,11 @@ input:focus {
   #chat_container {
     height: 600px;
   }
+  #loginForm {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
 }
