--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
   --header3: 3rem;
   --header4: 2rem;
   --header5: 1.5rem;
-  --paragraph: 1rem;
+  --paragraph: 0.8rem;
   /* Box-shadow */
   --boxShadow: 0px 8px 8px -10px rgba(0, 0, 0, 0.5);
 }
@@ -47,24 +47,6 @@ body {
 }
 
 /* Typography */
-h1 {
-  font-size: var(--header1);
-}
-h2 {
-  font-size: var(--header2);
-}
-h3 {
-  font-size: var(--header3);
-}
-h4 {
-  font-size: var(--header4);
-}
-h5 {
-  font-size: var(--header5);
-}
-p {
-  font-size: var(--paragraph);
-}
 a.link {
   color: var(--black);
   border-bottom: 2px solid var(--red);
@@ -81,7 +63,6 @@ header {
   top: 0;
   z-index: 2;
   background-color: var(--white);
-  margin-bottom: 20px;
 }
 
 header #top_menu {
@@ -94,6 +75,10 @@ header #bottom_menu {
 
 header #nav_logo {
   width: 50px;
+}
+
+.sidebar {
+  display: none;
 }
 
 /* Mobile-only Burger Menu */
@@ -324,7 +309,7 @@ button#decreaseFont {
 #chat_container {
   position: relative;
   height: 800px;
-  width: 100%;
+  width: 100%; /* Added for consistency */
   border: solid 1px var(--grey);
   display: flex;
   flex-direction: column;
@@ -378,7 +363,6 @@ button#decreaseFont {
 #chatbtns_container {
   display: flex;
   position: absolute;
-  margin-bottom: 100px;
 }
 
 #chat_container #disclaimer {
@@ -481,11 +465,109 @@ input:focus {
 /* Desktop */
 @media (min-width: 1024px) {
   body {
-    padding-left: 150px;
-    padding-right: 150px;
+    margin: 0;
+    padding: 0;
   }
   .mobile {
     display: none;
+  }
+
+  .main {
+    display: flex;
+    height: calc(100vh - 100px);
+  }
+
+  .sidebar {
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+    background-color: var(--grey);
+    justify-content: space-between;
+    min-width: 235px;
+  }
+
+  .sidebar_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    list-style: none;
+  }
+
+  #start_chat {
+    background-color: var(--red);
+    padding: 10px;
+    color: var(--white);
+    text-transform: uppercase;
+    font-weight: bold;
+    width: 80%;
+    justify-content: center;
+    margin: 30px 0;
+  }
+
+  #start_chat p {
+    margin-left: 0;
+  }
+
+  #start_chat span {
+    margin-right: 10px;
+    font-size: 1.8rem;
+  }
+
+  .sidebar_item {
+    display: flex;
+    align-items: center;
+    margin: 10px 0;
+    justify-content: flex-start;
+    width: 80%;
+  }
+
+  #sidebar_dropdown {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .sidebar_item p {
+    font-size: 0.8rem;
+    margin-left: 10px;
+  }
+
+  .user {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  #user_name {
+    font-size: 0.8rem;
+    margin: 0 0 0 10px;
+  }
+
+  #user_info {
+    display: flex;
+    height: 100px;
+    width: 80%;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0;
+  }
+
+  #user_info div {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
+  
+  #user_info #user_avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: var(--red) solid;
+  }
+  
+  #user_info #user_settings {
+    font-size: 20px;
   }
 
   .desktop {
@@ -499,46 +581,25 @@ input:focus {
     height: 85%;
     padding: 10px 0 0 20px;
   }
-  header #top_menu {
-    display: block;
-    position: absolute;
-    right: 20px;
-    top: 10px;
-  }
-  header #top_menu ul {
-    list-style: none;
-    display: flex;
-  }
-  header #top_menu ul li {
-    margin: 0px 0 0 25px;
-    font-size: 0.7rem;
-    cursor: pointer;
-  }
-
-  header #bottom_menu {
-    display: block;
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-  }
-  header #bottom_menu ul {
-    list-style: none;
-    display: flex;
-  }
-  header #bottom_menu ul li {
-    margin: 10px;
-    font-size: 0.8rem;
-    font-weight: bold;
-    cursor: pointer;
-  }
 
   #burger_nav {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    position: relative;
+    width: 30%;
+    height: 670px;
+    background-color: var(--grey);
+    box-shadow: var(--boxShadow);
+    opacity: 1;
   }
 
   .input_container {
     position: relative;
     width: 50%;
+    display: flex;
+    align-items: center;
   }
 
   .input_container i {
@@ -547,16 +608,47 @@ input:focus {
 
   .input_container input#userprompt {
     width: 100%;
-    height: 40px;
     padding-left: 20px;
     padding-right: 40px;
-    margin: 10px 0;
+    height: 40px;
     background-color: var(--grey);
     border: none;
+    margin: 0;
   }
+
+  #chatbtns_container {
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+
+  #chatbtns_container button {
+    height: 40px;
+    width: 40px;
+    padding: 0;
+  }
+
   #chat_container {
-    height: 600px;
+    height: 100%;
+    display: flex;
+    align-items: center;
   }
+
+  .input_container {
+    height: 15%;
+  }
+
+  #chat {
+    height: 85%;
+    display: flex;
+    align-items: center;
+  }
+
+  #chat h1 {
+    font-size: 2.5rem;
+    transition: all 0.5s ease-in-out;
+  }
+
   #loginForm {
     display: flex;
     flex-direction: column;
