--- a/style.css
+++ b/style.css
@@ -376,15 +376,7 @@ button#decreaseFont {
   position: relative;
   width: 100%;
 }
-.input_container input#userprompt {
-  width: 100%;
-  height: 50px;
-  padding-left: 20px;
-  padding-right: 40px;
-  margin: 10px 0 0 0;
-  background-color: var(--grey);
-  border: none;
-}
+
 input:focus {
   outline: var(--black) solid 1px;
 }
@@ -493,7 +485,7 @@ input:focus {
     list-style: none;
   }
 
-  #start_chat {
+  #start_chat_button {
     background-color: var(--red);
     padding: 10px;
     color: var(--white);
@@ -501,24 +493,52 @@ input:focus {
     font-weight: bold;
     width: 80%;
     justify-content: center;
-    margin: 30px 0;
+    margin: 30px 20px;
   }
 
-  #start_chat p {
+  #start_chat_button:hover {
+    background-color: #6b152f;
+    cursor: pointer;
+  }
+
+  #start_chat_button p {
     margin-left: 0;
   }
 
-  #start_chat span {
+  #start_chat_button span {
     margin-right: 10px;
+    margin-left: 0;
     font-size: 1.8rem;
   }
 
   .sidebar_item {
     display: flex;
     align-items: center;
-    margin: 10px 0;
+    padding: 8px 0;
     justify-content: flex-start;
-    width: 80%;
+    width: 100%;
+    margin: 2px 0;
+  }
+
+  .sidebar_item span {
+    margin-left: 30px;
+  }
+
+  .sidebar_item:hover {
+    color: var(--red);
+    font-weight: bold;
+    cursor: pointer;
+  }
+
+  .sidebar_item.active {
+    border-left: 5px solid var(--red);
+    background-color: var(--light-grey);
+    color: var(--red);
+    font-weight: bold;
+  }
+
+  #arrow_down {
+    margin: 0 30px 0 0;
   }
 
   #sidebar_dropdown {
@@ -602,18 +622,45 @@ input:focus {
     align-items: center;
   }
 
-  .input_container i {
-    top: 50%;
+  #userprompt {
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: var(--grey);
+    font-size: 0.8rem;
+    width: 100%;
+    height: 45px;
   }
 
-  .input_container input#userprompt {
-    width: 100%;
-    padding-left: 20px;
-    padding-right: 40px;
-    height: 40px;
+  #userprompt:focus {
+    outline: none;
+  }
+
+  #userprompt:valid {
     background-color: var(--grey);
-    border: none;
-    margin: 0;
+  }
+
+  #sendprompt_btn {
+    background-color: var(--red);
+    color: var(--white);
+    padding: 5px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    border-radius: 100%;
+  }
+
+  #sendprompt_btn:hover {
+    background-color: #6b152f;
+  }
+
+  #chat_input {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: var(--grey);
+    width: 100%;
+    padding: 0 15px;
+    height: 45px;
   }
 
   #chatbtns_container {
@@ -623,8 +670,8 @@ input:focus {
   }
 
   #chatbtns_container button {
-    height: 40px;
-    width: 40px;
+    height: 45px;
+    width: 45px;
     padding: 0;
   }
 
