--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
   box-sizing: border-box;
   font-family: var(--mainFont);
 }
+
 body {
   background-color: var(--white);
   padding-left: 10px;
@@ -40,6 +41,7 @@ body {
 .hidden {
   display: none;
 }
+
 .center {
   display: flex;
   justify-content: center;
@@ -272,12 +274,14 @@ header #nav_logo {
   background-color: #3f5b58;
   margin: 60px 0;
 }
+
 .smallbreaker {
   width: 100%;
   border: 1px solid #3f5b58;
   background-color: #3f5b58;
   margin: 20px 0;
 }
+
 .boxlink {
   width: 370px;
   height: 370px;
@@ -287,6 +291,7 @@ header #nav_logo {
   background-image: url("https://www.hjemmevaernet.dk/globalassets/hjv/billeder/promo/organisation/-fhv-promo-2024-promo.jpg");
   background-repeat: no-repeat;
 }
+
 .boxlink .overlay {
   position: absolute;
   padding: 10px;
@@ -295,6 +300,7 @@ header #nav_logo {
   background-color: var(--lightBlue);
   bottom: 20px;
 }
+
 .boxlink .overlay div {
   color: var(--white);
   font-size: 1.5rem;
@@ -303,6 +309,7 @@ header #nav_logo {
   padding-left: 10px;
   position: relative;
 }
+
 .boxlink .overlay div::after {
   content: ">";
   position: absolute;
@@ -318,6 +325,7 @@ button {
   transition: background-color 0.3s linear;
   cursor: pointer;
 }
+
 button:hover {
   background-color: var(--black);
   color: var(--white);
@@ -345,27 +353,30 @@ button#decreaseFont {
   position: relative;
   height: 100%;
   width: 100%;
-  border: solid 1px var(--grey);
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   font-size: var(--paragraph);
   padding: 10px;
 }
+
 #chat {
   position: relative;
   height: 600px;
 }
+
 #chat #user_questions {
   position: absolute;
   right: 0;
 }
+
 #chat .user_question {
   top: 20px;
   position: relative;
   text-align: right;
   font-size: var(--paragraph);
 }
+
 #chat .user_question::before {
   content: "Bruger";
   display: none;
@@ -373,22 +384,26 @@ button#decreaseFont {
   top: -20px;
   right: 0px;
 }
+
 #chat #bot_answers {
   position: absolute;
   top: 100px;
   left: 0;
 }
+
 #chat .bot_answer {
   position: relative;
   text-align: left;
   font-size: var(--paragraph);
   line-height: 1.5;
 }
+
 #chat .bot_answer::before {
   content: "Bot";
   display: none;
   top: -20px;
 }
+
 #chat.show-username .user_question::before,
 #chat.show-username .bot_answer::before {
   display: inline;
@@ -396,6 +411,7 @@ button#decreaseFont {
   position: absolute;
   color: var(--red);
 }
+
 #chatbtns_container {
   display: flex;
   position: absolute;
@@ -423,6 +439,7 @@ button#decreaseFont {
   padding: 0 15px;
   height: 45px;
 }
+
 #userprompt {
   margin: 0;
   padding: 0;
@@ -471,11 +488,14 @@ input:focus {
 #chat {
   display: flex;
   align-items: center;
+  height: 650px;
 }
 
-#chat_container #welcome_text {
+#chat_container h1 {
+  position: absolute;
   text-align: center;
-  font-size: 1rem;
+  top: 30%;
+  font-size: 3rem;
 }
 
 /* Loader */
@@ -501,6 +521,7 @@ input:focus {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -512,6 +533,7 @@ input:focus {
   flex-direction: row;
   background-color: var(--grey);
 }
+
 .materiale .materiale_billede img {
   width: 200px;
 }
@@ -519,8 +541,10 @@ input:focus {
 .materiale .materiale_info {
   margin: 10px;
   display: flex;
-  flex-direction: column; /* Aligns items vertically */
-  justify-content: space-between; /* Distributes space between items along the y-axis */
+  flex-direction: column;
+  /* Aligns items vertically */
+  justify-content: space-between;
+  /* Distributes space between items along the y-axis */
 }
 
 .materiale .materiale_info .materiale_navn {
@@ -537,6 +561,7 @@ input:focus {
     position: relative;
     width: 50%;
   }
+
   #chat_container {
     height: 500px;
   }
@@ -548,6 +573,7 @@ input:focus {
     margin: 0;
     padding: 0;
   }
+
   .mobile {
     display: none;
   }
@@ -771,7 +797,8 @@ input:focus {
     display: flex;
     flex-direction: column;
     gap: 15px;
-    background-color: transparent; /* Ingen baggrundsfarve */
+    background-color: transparent;
+    /* Ingen baggrundsfarve */
   }
 
   .userMessage,
@@ -783,13 +810,17 @@ input:focus {
   }
 
   .userMessage {
-    align-self: flex-end; /* Højrejuster brugerens besked */
-    text-align: right; /* Sørg for at teksten er højrejusteret */
+    align-self: flex-end;
+    /* Højrejuster brugerens besked */
+    text-align: right;
+    /* Sørg for at teksten er højrejusteret */
   }
 
   .chatMessage {
-    align-self: flex-start; /* Venstrejuster chatbot-beskeden */
-    text-align: left; /* Sørg for at teksten er venstrejusteret */
+    align-self: flex-start;
+    /* Venstrejuster chatbot-beskeden */
+    text-align: left;
+    /* Sørg for at teksten er venstrejusteret */
   }
 
   .userName {
@@ -797,7 +828,8 @@ input:focus {
     font-weight: bold;
     color: var(--red);
     margin-bottom: 5px;
-    text-align: right; /* Højrejuster brugernavnet */
+    text-align: right;
+    /* Højrejuster brugernavnet */
   }
 
   .senderName {
@@ -805,6 +837,7 @@ input:focus {
     font-weight: bold;
     color: var(--red);
     margin-bottom: 5px;
-    text-align: left; /* Venstrejuster chatbot-navnet */
+    text-align: left;
+    /* Venstrejuster chatbot-navnet */
   }
 }
