--- a/style.css
+++ b/style.css
@@ -652,15 +652,31 @@ input:focus {
     font-weight: bold;
   }
 
+  .threads_container div.active {
+    font-size: 0.2rem;
+  }
+
   #arrow_down {
     margin: 0 30px 0 0;
   }
 
   #sidebar_dropdown {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     width: 100%;
+  }
+
+  #sidebar_dropdown_txt {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .thread {
+    font-size: 0.8rem;
   }
 
   .sidebar_item p {
