added hover effect on chat overview and style the login slightly

--- a/style.css
+++ b/style.css
@@ -659,6 +659,7 @@ input:focus {
     background-color: var(--light-grey);
     color: var(--red);
     font-weight: bold;
+    cursor: default;
   }
 
   #sidebar_dropdown {
@@ -698,6 +699,9 @@ input:focus {
   .thread {
     font-size: 0.6rem;
     margin-top: 10px;
+    line-height: 20px;
+    width: 180px;
+    max-width: 180px;
   }
 
   .sidebar_item p {
@@ -826,6 +830,15 @@ input:focus {
     justify-content: center;
     align-items: center;
     height: 100vh;
+  }
+
+  #loginForm input {
+    background-color: var(--grey);
+    width: 30%;
+    height: 5%;
+    padding-left: 20px;
+    border: none;
+    margin-top: 10px;
   }
 
   #chatbox {
