--- a/style.css
+++ b/style.css
@@ -597,6 +597,33 @@ input:focus {
   font-size: 12px;
 }
 
+#materialer_container {
+  display: none;
+  max-height: 200px;
+  overflow-y: auto;
+}
+
+#materialer_container.active {
+  display: block;
+}
+
+.materiale_item {
+  font-size: 0.8rem;
+  line-height: 20px;
+  width: 180px;
+  max-width: 180px;
+  padding: 5px 0 5px 10px;
+  margin: 5px 0;
+  cursor: pointer;
+}
+
+.materiale_item:hover {
+  font-weight: bold;
+  text-decoration: underline;
+  color: var(--red);
+  background-color: var(--darkerGrey);
+}
+
 /* Tablet */
 @media (min-width: 768px) {
   .input_container {
