--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ body {
   background-color: var(--white);
   padding-left: 10px;
   padding-right: 10px;
+  overflow-y: hidden;
+  height: 100vh;
 }
 
 /* Classes */
@@ -83,6 +85,101 @@ header #nav_logo {
 
 .sidebar {
   display: none;
+  z-index: 2;
+}
+
+.sidebar.active {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--grey);
+  justify-content: space-between;
+  width: 280px;
+  position: absolute;
+  height: 75vh;
+  right: 0;
+}
+
+.sidebar.active .sidebar_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style: none;
+}
+
+#start_chat_button {
+  background-color: var(--red);
+  padding: 10px;
+  color: var(--white);
+  text-transform: uppercase;
+  font-weight: bold;
+  width: 80%;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 20px;
+}
+
+.sidebar.active .sidebar_container .sidebar_item {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  width: 80%;
+  margin: 10px 0;
+}
+
+.sidebar_item.active {
+  border-left: 5px solid var(--red);
+  background-color: var(--light-grey);
+  color: var(--red);
+  font-weight: bold;
+  cursor: default;
+}
+
+#sidebar_dropdown {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+#sidebar_dropdown_txt {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+#threads_container {
+  display: none;
+}
+
+#threads_container.active {
+  max-height: 200px;
+  overflow-y: auto;
+  display: block;
+}
+
+#arrow_down {
+  margin: 0 30px 0 0;
+  transform: rotate(0deg);
+  transition: transform 0.3s ease-in-out;
+}
+
+#arrow_down.active {
+  transform: rotate(180deg);
+}
+
+.thread {
+  font-size: 0.8rem;
+  line-height: 20px;
+  width: 180px;
+  max-width: 180px;
+  padding: 5px 0 5px 10px;
+  margin: 5px 0;
+}
+
+.sidebar_item p {
+  font-size: 0.8rem;
+  margin-left: 10px;
 }
 
 /* Mobile-only Burger Menu */
@@ -211,7 +308,7 @@ header #nav_logo {
   margin: 0 0 0 10px;
 }
 
-#user_name::before {
+.user #user_info div #user_name::before {
   content: var(--userName);
 }
 
@@ -371,8 +468,20 @@ button#decreaseFont {
 
 #chat {
   position: relative;
+  justify-content: center;
   height: 600px;
-  padding-bottom: 30px;
+  padding-bottom: 50px;
+  width: 100%;
+  overflow-y: auto;
+}
+
+#chat #chatbox {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  overflow-y: auto;
 }
 
 #chat #user_questions {
@@ -420,6 +529,17 @@ button#decreaseFont {
   font-size: 0.8rem;
   position: absolute;
   color: var(--red);
+}
+
+#current-chat-title {
+  position: absolute;
+  top: 10px;
+}
+
+#current-chat-title_container {
+  background-color: var(--white);
+  width: 100%;
+  text-align: center;
 }
 
 .bot_answer h1 {
@@ -522,6 +642,7 @@ input:focus {
   height: 100%;
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .input_container {
@@ -531,7 +652,13 @@ input:focus {
 #chat {
   display: flex;
   align-items: center;
-  height: 650px;
+  height: calc(100vh - 100px - 150px);
+  width: 100%;
+  overflow-y: auto;
+}
+
+#chat div {
+  gap: 80px;
 }
 
 #chat_container h1 {
@@ -880,14 +1007,19 @@ input:focus {
   }
 
   #chat {
-    height: 90%;
+    height: 100%;
     display: flex;
     align-items: center;
+    width: 60%;
   }
 
   #chat h1 {
     font-size: 2.5rem;
     transition: all 0.5s ease-in-out;
+  }
+
+  #chat div {
+    margin: 20px 0;
   }
 
   #loginForm {
@@ -912,7 +1044,7 @@ input:focus {
     padding: 10px;
     display: flex;
     flex-direction: column;
-    gap: 100px;
+    gap: 50px;
     background-color: transparent;
     height: 100%;
     overflow-y: auto;
