--- a/style.css
+++ b/style.css
@@ -362,7 +362,7 @@ button#decreaseFont {
   height: calc(100vh - 100px - 150px);
   padding-bottom: 50px;
   width: 100%;
-  overflow-y: auto;
+  overflow-y: hidden;
 }
 
 #chat div {
@@ -810,7 +810,7 @@ input:focus {
     display: flex;
     align-items: center;
     width: 60%;
-    overflow-y: auto;
+    overflow-y: hidden;
   }
 
   #chat h1 {
